# moth_transport

./: 00_MotH_base_demo.ipynb  01_MotH_thermal_cond_qualitative.ipynb  03_MotH_demo_train_parallel.ipynb  04_free_volume_energy.ipynb  20191105_pure_parameters_feos.json  README.md  moth.py  pyproject.toml
experimental/butane/: butane_thermal_conductivity_proc.csv  butane_viscosity_proc.csv
experimental/butanol/: butanol_diffusion.csv  butanol_thermal_conductivity_proc.csv  butanol_viscosity_proc.csv
experimental/carbondioxide/: carbondioxide_thermal_conductivity_proc.csv  carbondioxide_viscosity_proc.csv
experimental/dodecane/: dodecane_diffusion.csv  dodecane_speed_of_sound_proc.csv  dodecane_viscosity_proc.csv
experimental/heptane/: heptane_diffusion.csv  heptane_thermal_conductivity_proc.csv  heptane_viscosity_proc.csv
experimental/hexane/: hexane_diffusion.csv  hexane_speed_of_sound_proc.csv  hexane_thermal_conductivity_proc.csv  hexane_viscosity_proc.csv
experimental/nonane/: nonane_viscosity_proc.csv
experimental/octane/: octane_speed_of_sound_proc.csv  octane_thermal_conductivity_proc.csv  octane_viscosity_proc.csv
experimental/propane/: process_raw.py  propane_bell_viscosity.xlsx  propane_bell_viscosity_proc.csv  propane_converted.csv  propane_viscosity_proc.csv
experimental/propanol/: .~lock.propanol_viscosity_proc.csv#  propanol_diffusion.csv  propanol_thermal_conductivity_proc.csv  propanol_viscosity_proc.csv
experimental/water/: water_viscosity_proc.csv
experimental/water_hbond/: .~lock.water_viscosity.csv#  water_viscosity_full.csv  (+1 more)
(+2 files in other folders)
